aarch32: fix for compiler/7116216/StackOverflow regresstion test

XMLWordPrintable

    • aarch32
    • linux

      Nota bene: affects only JIT-ed hotspot
      Debug version of runtime asserts with following message:
      # Internal Error (/Users/snazarkin/projects/zulu/hotspot/src/cpu/aarch32/vm/frame_aarch32.inline.hpp:77), pid=22395, tid=1657582688
      # assert(pc != NULL) failed: no pc?

      Following regression tests are failed:
      compiler/7116216/StackOverflow.java

            Assignee:
            Sergey Nazarkin
            Reporter:
            Sergey Nazarkin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: