8152304: aarch32: fix for compiler/7116216/StackOverflow regression test Reviewed-by: enevill Contributed-by: snazarkin@azul.com